--- a/src/renderer/src/assets/main.css
+++ b/src/renderer/src/assets/main.css
@@ -114,12 +114,21 @@
   --color-sidebar-ring: var(--sidebar-ring);
 }
 
+@font-face {
+  font-family: 'Monospaced';
+  src: url('./fusion-pixel-12px-monospaced-zh_hans.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
 @layer base {
   * {
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-[url('./img/bg.png')] bg-no-repeat bg-cover text-white;
+    @apply text-[#46FF84];
+    font-family: 'Monospaced';
   }
 }
 
